finito main con il bonus hover

--- a/index.html
+++ b/index.html
@@ -11,20 +11,158 @@
 <body class="debug">
     <header>
         <div class="navbar">
-            <a href="#">Donna</a>
-            <a href="#">Uomo</a>
-            <a href="#">Bambini</a>
+            <a href="#"><small><b>Donna</b></small></a>
+            <a href="#"><small><b>Uomo</b></small></a>
+            <a href="#"><small><b>Bambini</b></small></a>
         </div>
         <div class="logo">
             <img src="img/boolean-logo.png" alt="Logo">
         </div>
-        <div class="icons white">
+        <div class="icons">
             <i class="fa-regular fa-user"></i>
             <i class="fa-regular fa-heart"></i>
             <i class="fa-solid fa-bag-shopping"></i>
         </div>
-
     </header>
+    <main>
+        <!-- Main -->
+        <!-- Card Box 1 -->
+        <div class="box-container">
+            <div class="container-flex">
+                <articole class="card">
+                    <!-- Foto E Info-->
+                    <div class="photo">
+                        <img class="photo-1" src="img/1b.webp" alt="T-Shirt">
+                        <img class="photo-2" src="img/1.webp" alt="Giacca">
+                        <!-- Dettagli Nella Foto -->
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <div class="details">
+                            <h4 class="discount">-50%</h4>
+                            <h4 class="green">Sostenibilità</h4>
+                        </div>  
+                        <!-- Info Sotto La Foto -->
+                    </div> 
+                    <div class="info">
+                        <h3>Levi's</h3>
+                        <h2>RELAXED FIT TEE UNISEX</h2>
+                        <strong class="price">14,99 €</strong>
+                        <span class="real-price">29,99 €</span>
+                    </div>
+                </articole>
+
+                <!-- Card Box 2 -->
+                <articole class="card">
+                    <!-- Foto E Info-->
+                    <div class="photo">
+                        <img class="photo-1" src="img/2b.webp" alt="roses tee">
+                        <img class="photo-2" src="img/2.webp" alt="roses tee">
+                        <!-- Dettagli Nella Foto -->
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <div class="details">
+                            <h4 class="discount">-30%</h4>
+                        </div>      
+                    </div> 
+                    <!-- Info Sotto La Foto -->
+                    <div class="info">
+                        <h3>Guess</h3>
+                        <h2>ROSES TEE</h2>
+                        <strong class="price"> 20,99 €</strong>
+                        <span class="real-price">29,99 €</span>
+                    </div>
+                </articole>
+                <!-- Card Box 3 -->
+                <articole class="card">
+                    <!-- Card: foto, info-->
+                    <div class="photo">
+                        <img class="photo-1" src="img/3b.webp" alt="abito verde">
+                        <img class="photo-2" src="img/3.webp" alt="abito beige">
+                        <!-- Dettagli Nella Foto -->
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <div class="details">
+                            <h4 class="discount">-50%</h4>
+                            <h4 class="green">Sostenibilità</h4>
+                        </div>
+                        <!-- Info Sotto La Foto -->
+                    </div> 
+                    <div class="info">
+                        <h3>Come Zucchero Filato</h3>
+                        <h2>VOGLIA DI COLORI PASTELLO</h2>
+                        <strong class="price">129,99 €</strong> 
+                        <span class="real-price">184,99€</span>
+                    </div>
+                </articole>
+                <!-- Card Box 4 -->
+                <articole class="card">
+                    <!-- Card: foto, info-->
+                    <div class="photo">
+                        <img class="photo-1" src="img/4b.webp" alt="T-Shirt">
+                        <img class="photo-2" src="img/4.webp" alt="Giacca">
+                        <!-- Dettagli Nella Foto -->
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <div class="details">
+                            <h4 class="discount">-50%</h4>
+                            <h4 class="green">Sostenibilità</h4>
+                        </div>
+                        <!-- Info Sotto La Foto -->
+                    </div> 
+                    <div class="info">
+                        <h3>Levi's</h3>
+                        <h2>TEE UNISEX</h2>
+                        <strong class="price">14,99 €</strong> 
+                        <span class="real-price">29,99 €</span>
+                    </div>
+                </articole>
+                 <!-- Card Box 5 -->
+                <articole class="card">
+                    <!-- Card: foto, info-->
+                    <div class="photo">
+                        <img class="photo-1" src="img/5b.webp" alt="Abito Elegante">
+                        <img class="photo-2" src="img/5.webp" alt="Abito Elegante">
+                        <!-- Dettagli Nella Foto -->
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <!-- Info Sotto La Foto -->
+                    </div> 
+                    <div class="info">
+                        <h3>Maya Deluxe</h3>
+                        <h2>STRIPE BODICE</h2>
+                        <strong class="price">99,99 €</strong>
+                    </div>
+                </articole>
+                 <!-- Card Box 6 -->
+                <articole class="card">
+                    <!-- Card: foto, info-->
+                    <div class="photo">
+                        <img class="photo-1" src="img/6b.webp" alt="Maglione Nero">
+                        <img class="photo-2" src="img/6.webp" alt="Maglione Nero">
+                        <!-- Dettagli Nella Foto -->
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+                        <div class="details">
+                            <h4 class="green">Sostenibilità</h4>
+                        </div>
+                    <!-- Info Sotto La Foto -->
+                    </div> 
+                    <div class="info">
+                        <h3>Esprit</h3>
+                        <h2>MAGLIONE - BLACK</h2>
+                        <strong class="price">29,99</strong>
+                    </div>
+                </articole>
+            </div>
+        </div>
+    </main>
+    <!-- Footer -->
     
 </body>
 </html>
