--- a/index.html
+++ b/index.html
@@ -163,6 +163,23 @@
         </div>
     </main>
     <!-- Footer -->
-    
+    <footer>
+        <div class="footer-content">
+            <p>Boolando s.r.l</p>
+                <ul>
+                    <li><a href="#">Informazioni legali</a></li>
+                    <li><a href="#">Informativa sulla privacy</a></li>
+                    <li><a href="#">Diritto di recesso</a></li>
+                </ul>
+        </div> 
+            <div class="footer-content social-media">
+                <p>Trovaci anche su</p>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-pinterest"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+    </footer>
 </body>
 </html>
